# portkill

./: .gitignore  index.html  package-lock.json  package.json  project.yml
.github/workflows/: ci.yml  release.yml
PortKill.xcodeproj/: project.pbxproj
PortKill.xcodeproj/project.xcworkspace/xcuserdata/angozero.xcuserdatad/: UserInterfaceState.xcuserstate
PortKill.xcodeproj/xcshareddata/xcschemes/: PortKill.xcscheme
PortKill/App/: PortKillApp.swift
PortKill/Assets.xcassets/MenuBarKnife.imageset/: Contents.json
PortKill/DesignSystem/: BrutalistTokens.swift
PortKill/DesignSystem/Models/: PortEntry.swift
PortKill/Resources/: Info.plist  PortKill.entitlements
PortKill/Services/: PortScanner.swift  ProcessTerminator.swift
PortKill/ViewModels/: PortListViewModel.swift
PortKill/Views/: EmptyStateView.swift  ErrorBanner.swift  FooterView.swift  HeaderView.swift  KillConfirmationModal.swift  PortListView.swift  PortRowView.swift  TabBarView.swift
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  scanner.rs  terminator.rs  types.rs
src/app/: types.ts
src/components/: EmptyState.tsx  ErrorBanner.tsx  Footer.tsx  Header.tsx  KillModal.tsx  PortListView.tsx  PortRow.tsx  TabBar.tsx
src/hooks/: usePortScanner.ts
src/services/: portApi.ts
