[package]
name = "portkill"
version = "0.4.0"
description = "Monitor TCP listening ports and kill processes. Tray app for macOS and Windows."
authors = ["angozero"]
edition = "2021"

[lib]
name = "portkill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
